trunk/Archive2/ab/404cced1d4ef9e/output
main.cpp:37:22: error: no matching constructor for initialization of 'Vector_container'
    Vector_container vc{10, 9, 8, 7, 6, 5, 4, 3, 2, 1};
                     ^ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
main.cpp:23:5: note: candidate constructor not viable: requires single argument 's', but 10 arguments were provided
    Vector_container(int s): v{s}{}
    ^
main.cpp:20:7: note: candidate constructor (the implicit copy constructor) not viable: requires 1 argument, but 10 were provided
class Vector_container:public Container{
      ^
1 error generated.
